[gd_scene load_steps=10 format=3 uid="uid://cqphomwumevmc"]

[ext_resource type="Texture2D" uid="uid://cv7ympom4crxp" path="res://Map/correcciones/relleno rosa.png" id="1_eodug"]
[ext_resource type="Script" path="res://Map/stomach_vein.gd" id="1_l46bc"]
[ext_resource type="AudioStream" uid="uid://bhyu3o4d5tog2" path="res://Sound Effects/wind-blowing-sfx-12809.mp3" id="2_qufw0"]
[ext_resource type="Texture2D" uid="uid://c1sq5ju2eeq45" path="res://Map/correcciones/texturarelleno.png" id="2_xrk6p"]
[ext_resource type="Texture2D" uid="uid://bv184dodsv71k" path="res://Map/correcciones/contornovena.png" id="3_mxuuc"]
[ext_resource type="PackedScene" uid="uid://c7cf8bdt4itlk" path="res://new folder/HumoStomachVein.tscn" id="5_2oflm"]
[ext_resource type="PackedScene" uid="uid://qek2047ptqxp" path="res://Enemies/trigger_box_spawn_enemies.tscn" id="6_237yh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8lrwk"]
size = Vector2(700, 118)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fsk8y"]
size = Vector2(895, 264)

[node name="stomachVein" type="Node2D"]
script = ExtResource("1_l46bc")

[node name="Viento" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_qufw0")
volume_db = 4.0
max_distance = 90000.0
attenuation = 0.0228763
parameters/looping = true

[node name="GoFastZone" type="Area2D" parent="."]
position = Vector2(977, -58)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoFastZone"]
modulate = Color(1, 1, 0, 1)
shape = SubResource("RectangleShape2D_8lrwk")

[node name="CaminoRecto" type="Node2D" parent="."]
use_parent_material = true
position = Vector2(1012, -841)
scale = Vector2(1.5, 1)

[node name="Sprite2D" type="Sprite2D" parent="CaminoRecto"]
use_parent_material = true
texture = ExtResource("1_eodug")

[node name="Sprite2D2" type="Sprite2D" parent="CaminoRecto"]
use_parent_material = true
texture = ExtResource("2_xrk6p")

[node name="Sprite2D3" type="Sprite2D" parent="CaminoRecto"]
use_parent_material = true
texture = ExtResource("3_mxuuc")

[node name="Sprite2D4" type="Sprite2D" parent="CaminoRecto"]
use_parent_material = true
position = Vector2(-35.7393, -4274.53)
rotation = 3.13374
texture = ExtResource("1_eodug")

[node name="Sprite2D5" type="Sprite2D" parent="CaminoRecto"]
use_parent_material = true
position = Vector2(-35.7393, -4274.53)
rotation = 3.13374
texture = ExtResource("2_xrk6p")

[node name="Sprite2D6" type="Sprite2D" parent="CaminoRecto"]
use_parent_material = true
position = Vector2(-35.7393, -4274.53)
rotation = 3.13374
texture = ExtResource("3_mxuuc")

[node name="WallLeft" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="WallLeft"]
polygon = PackedVector2Array(640, 1065, 640, 120, 610, -966, 650, -2100, 660, -2466, 634, -3100, 665, -4434, 602, -5242, 660, -5629, 625, -7034, 120, -6927, 69, 1115)

[node name="WallRight" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="WallRight"]
polygon = PackedVector2Array(1324, 1083, 1316, 97, 1333, -576, 1377, -768, 1313, -1074, 1303, -2076, 1310, -2574, 1374, -3375, 1334, -4325, 1325, -6998, 1593, -6956, 1638, 1081)

[node name="ColorAnimation" type="Timer" parent="."]
wait_time = 0.1

[node name="EndZone" type="Area2D" parent="."]
modulate = Color(1, 0, 0, 1)
position = Vector2(996, -6086)

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndZone"]
shape = SubResource("RectangleShape2D_fsk8y")

[node name="HumoStomach" parent="." instance=ExtResource("5_2oflm")]
position = Vector2(1066, -7273)

[node name="Enemigos" type="Node2D" parent="."]

[node name="TriggerBoxSpawnEnemies" parent="Enemigos" instance=ExtResource("6_237yh")]
position = Vector2(994, -143)
minEnemies = 2
maxSpeed = 10
minSpeed = 5

[node name="TriggerBoxSpawnEnemies2" parent="Enemigos" instance=ExtResource("6_237yh")]
position = Vector2(994, -753)
minEnemies = 2
maxSpeed = 10
minSpeed = 5

[node name="TriggerBoxSpawnEnemies3" parent="Enemigos" instance=ExtResource("6_237yh")]
position = Vector2(994, -1524)
minEnemies = 2
maxSpeed = 10
minSpeed = 5

[node name="TriggerBoxSpawnEnemies4" parent="Enemigos" instance=ExtResource("6_237yh")]
position = Vector2(994, -2441)
minEnemies = 2
maxSpeed = 10
minSpeed = 5

[node name="TriggerBoxSpawnEnemies5" parent="Enemigos" instance=ExtResource("6_237yh")]
position = Vector2(994, -3317)
minEnemies = 2
maxSpeed = 10
minSpeed = 5

[node name="TriggerBoxSpawnEnemies6" parent="Enemigos" instance=ExtResource("6_237yh")]
position = Vector2(994, -4411)
minEnemies = 2
maxSpeed = 10
minSpeed = 5

[connection signal="body_entered" from="GoFastZone" to="." method="_on_go_fast_zone_body_entered"]
[connection signal="timeout" from="ColorAnimation" to="." method="_on_color_animation_timeout"]
[connection signal="body_entered" from="EndZone" to="." method="_on_end_zone_body_entered"]
